package com.unbosque.afd.core.modelo;

public enum MotivoRechazo {
    NINGUNO,
    ESTADO_NO_ACEPTACION,
    SIMBOLO_FUERA_ALFABETO,
    TRANSICION_NO_DEFINIDA
}
