package com.unbosque.afd.core.modelo;

public record Punto(double x, double y) {
}
