package com.unbosque.afd.core.modelo;

public enum Severidad {
    ERROR,
    ADVERTENCIA
}
